correct the header z-index

--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,7 @@ img {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 9999;
+  z-index: 9998;
 }
 
 .mobile-header .logo {
