--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -97,7 +97,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 9999;
+  z-index: 9998;
 
   .logo {
     max-width: 180px;
